--- a/css/main.css
+++ b/css/main.css
@@ -456,3 +456,82 @@ h2{
 
 
 }
+
+/* About Page */
+
+/*Mobile first */
+
+.mypic img{
+    margin-top: 20px;
+    object-fit: cover;
+    width: 100%;
+    
+
+}
+
+.aboutme h2{
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+}
+
+.aboutme h3{
+    margin-left: 0px;
+    text-align: left;
+    font-family:var(--text-headings);
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.aboutme p{
+    color:var(--clr-text);
+    text-align: left;
+
+    
+}
+#home a{
+    color: var(--clr-headings);
+}
+
+#about a{
+    color: #FFFFFF;
+}
+/*about large screens */
+@media only screen and (min-width: 600px){
+   
+    .zama{
+        display: grid;
+        grid-template-columns: 50% 1fr;
+        grid-template-rows: 100%;
+    }
+    .mypic{
+        margin-top: 30px;
+        
+        
+    }
+
+
+    .aboutme{
+        margin-left: 30px;
+        margin-top: 40px;
+       
+        
+        
+    }
+
+    .aboutme h2{
+        font-size: 5vw;
+        margin-bottom: 30px;
+    }
+    .aboutme h3{
+        font-size:3vw;
+        
+    }
+
+    .aboutme p{
+        font-size: 2.2vw;
+        margin-top: 20px;
+    }
+
+}
