--- a/css/main.css
+++ b/css/main.css
@@ -535,3 +535,131 @@ h2{
     }
 
 }
+
+/*contact mobile first */
+
+h1{
+    margin-top: 40px;
+    text-align: center;
+    font-size: 5vw;
+}
+
+.form{
+    margin: 0 auto;
+    width: 90%;
+    padding: 1em;
+}
+
+.form label{
+    color:var(--clr-bg-sec);
+    
+}
+
+.form input{
+    width: 100%;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    background-color: var(--clr-bg);
+    border: solid 1px var(--clr-headings);
+
+    
+
+}
+
+::placeholder {
+    color: var(--clr-bg-sec);
+    padding-left: 5px;
+    
+
+    
+}
+
+
+
+#msg{
+    height: 20vw;
+    
+}
+.align{
+    display: flex;
+    justify-content:flex-end;
+    
+}
+
+#button{
+    width:20%;
+    color:#FFFFFF;
+    height: auto;
+    padding: 9px;
+}
+
+/*Services Mobile first */
+
+.services{
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-row-gap:10px;
+
+}
+
+.logocreat{
+    background-color:var(--clr-sec);
+    color: #FFFFFF;
+    padding: 20px;
+    border: solid 1px #707070;
+    border-radius: 67px;
+    height: 10rem;
+    margin-top: 30px;
+
+}
+
+.webdev{
+    background-color:var(--clr-sec);
+    color: #FFFFFF;
+    padding: 20px;
+    border: solid 1px #707070;
+    border-radius: 67px;
+    height: 10rem;
+
+}
+
+.photography{
+    background-color:var(--clr-sec);
+    color: #FFFFFF;
+    padding: 20px;
+    border: solid 1px #707070;
+    border-radius: 67px;
+    height: 10rem;
+
+}
+
+.logocreat,.webdev,.photography,p{
+    margin-top: 40px;
+}
+
+@media only screen and (min-width:600px){
+
+    .services{
+        grid-template-columns: 1fr 1fr 1fr;
+         grid-column-gap: 20px;
+        
+    }
+
+    .logocreat,.webdev,.photography,h3{
+        font-size: 25px;
+    }
+    .logocreat,.webdev,.photography,p{
+        margin-top: 40px;
+        
+    }
+
+    .logocreat,.webdev,.photography{
+        height: 100%;
+    }
+
+  
+
+   
+
+
+}
